After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672693 - gvfs 1.11.5 doesn't compile anything with libimobiledevice 1.1.2
gvfs 1.11.5 doesn't compile anything with libimobiledevice 1.1.2
Status: RESOLVED FIXED
Product: gvfs
Classification: Core
Component: afc backend and volume monitor
1.11.x
Other Linux
: Normal normal
: ---
Assigned To: gvfs-maint
gvfs-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-23 14:12 UTC by Ionut Biru
Modified: 2012-04-02 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
proposed patch (2.75 KB, patch)
2012-04-02 07:36 UTC, Alexandre Rostovtsev
committed Details | Review

Description Ionut Biru 2012-03-23 14:12:59 UTC
they renamed a member from uuid to udid

http://cgit.sukimashita.com/libimobiledevice.git/commit/?id=7457346a7ad7dddc0188cd1cd6fc5920aabfe39a
Comment 1 Tomas Bzatek 2012-03-23 14:15:29 UTC
oh I love API breaks
Comment 2 Alexandre Rostovtsev 2012-04-02 07:36:18 UTC
Created attachment 211111 [details] [review]
proposed patch

This patch allows gvfs to build against both libimobiledevice-1.1.1 and 1.1.2. Since libimobiledevice lacks a library version macro, we are forced to check for the libimobiledevice-1.0 pkgconfig version in configure.
Comment 3 Tomas Bzatek 2012-04-02 13:02:17 UTC
Thanks for the patch, looks good and compiles fine with app-pda/libimobiledevice-1.1.2.  Committed to master:


commit c9f840192312c23f7eea666f964e7eab4c2e680e
Author: Alexandre Rostovtsev <tetromino@gentoo.org>
Date:   Mon Apr 2 14:58:58 2012 +0200

    afc: Fix building against libimobiledevice-1.1.2
    
    In 1.1.2, the struct idevice_event_t uuid field was renamed to udid.
    Since libimobiledevice lacks a library version macro, we are forced
    to check for the pkgconfig version in configure.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=672693
    
    Signed-off-by: Tomas Bzatek <tbzatek@redhat.com>