afc: Fix building against libimobiledevice-1.1.2

In 1.1.2, the struct idevice_event_t uuid field was renamed to udid.
Since libimobiledevice lacks a library version macro, we are forced
to check for the pkgconfig version in configure.

https://bugzilla.gnome.org/show_bug.cgi?id=672693

Signed-off-by: Tomas Bzatek <tbzatek@redhat.com>